k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: run-api
  namespace: run-api
spec:
  type: ClusterIP
  selector:
    app: run-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
